# wc-envc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: spec-vi.md  spec.md
examples/: .env.example  .env.production  .env.simple  README.md
src/: engine.rs  interactive.rs  main.rs  scanner.rs  setenv.rs
